--- a/index.html
+++ b/index.html
@@ -115,20 +115,20 @@
   <div class="indicator"></div>
   <div class="wrap">
     <ul>
-         <li><img src="images/_MG_7338.jpg"/></li>
-      <li><img src="images/_MG_7053.jpg"/></li>
+         <li><img src="/images/_MG_7338.jpg"/></li>
+      <li><img src="/images/_MG_7053.jpg"/></li>
      
-      <li><img src="images/_MG_7362.jpg"/></li>
-      <li><img src="images/_MG_7431.jpg"/></li>
-      <li><img src="images/_MG_7432.jpg"/></li>
-      <li><img src="images/_MG_7433.jpg"/></li>
-      <li><img src="images/_MG_7435.jpg"/></li>
-        <li><img src="images/_MG_7441.jpg"/></li>
-        <li><img src="images/_MG_7448.jpg"/></li>
-        <li><img src="images/_MG_7498.jpg"/></li>
-        <li><img src="images/_MG_7501.jpg"/></li>
-        <li><img src="images/_MG_7511.jpg"/></li>
-        <li><img src="images/_MG_7532.jpg"/></li>
+      <li><img src="/images/_MG_7362.jpg"/></li>
+      <li><img src="/images/_MG_7431.jpg"/></li>
+      <li><img src="/images/_MG_7432.jpg"/></li>
+      <li><img src="/images/_MG_7433.jpg"/></li>
+      <li><img src="/images/_MG_7435.jpg"/></li>
+        <li><img src="/images/_MG_7441.jpg"/></li>
+        <li><img src="/images/_MG_7448.jpg"/></li>
+        <li><img src="/images/_MG_7498.jpg"/></li>
+        <li><img src="/images/_MG_7501.jpg"/></li>
+        <li><img src="/images/_MG_7511.jpg"/></li>
+        <li><img src="/images/_MG_7532.jpg"/></li>
     </ul>
   </div>
 </div>
