--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="item active">
-						<img alt="" src="img/_MG_7053.jpg">
+						<img alt="" src="../ShikshaEmpoweringWomen.github.io/img/_MG_7053.jpg">
 						<div class="carousel-caption">
 						</div>
 					</div>
 					<div class="item">
-						<img alt="" src="img/_MG_7338.jpg">
+						<img alt="" src="../ShikshaEmpoweringWomen.github.io/img/_MG_7432.jpg">
 						<div class="carousel-caption">
 						</div>
 					</div>
 					<div class="item">
-						<img alt="" src="img/_MG_7362.jpg">
+						<img alt="" src="../ShikshaEmpoweringWomen.github.io/img/_MG_7362.jpg">
 						<div class="carousel-caption">
 						</div>
 					</div>
