--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="item active">
-						<img alt="" src="../ShikshaEmpoweringWomen.github.io/img/_MG_7053.jpg">
+						<img alt="" src="https://cloud.githubusercontent.com/assets/8117324/4900664/31975cc0-642a-11e4-94eb-e7ae09f3d1db.jpg">
 						<div class="carousel-caption">
 						</div>
 					</div>
 					<div class="item">
-						<img alt="" src="../ShikshaEmpoweringWomen.github.io/img/_MG_7432.jpg">
+						<img alt="" src="https://cloud.githubusercontent.com/assets/8117324/4900706/9cec145c-642a-11e4-8cb4-5e25870b60f9.jpg">
 						<div class="carousel-caption">
 						</div>
 					</div>
 					<div class="item">
-						<img alt="" src="../ShikshaEmpoweringWomen.github.io/img/_MG_7362.jpg">
+						<img alt="" src="https://cloud.githubusercontent.com/assets/8117324/4900719/c38f278e-642a-11e4-9d85-246af075ace8.jpg">
 						<div class="carousel-caption">
 						</div>
 					</div>
