--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
   <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
   <![endif]-->
-
+<style>
+    @media screen and (max-device-width: 760px) {
+.pad{
+margin-top: 75%;
+}
+    h1{align: center;
+    float: none;}
+}
+    </style>
   <!-- Fav and touch icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114-precomposed.png">
@@ -43,8 +51,9 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 <div class="container">
 	
-    <div class="row clearfix" id="home">      
-        <div class="col-md-8 col-md-offset-1" id="fl" >
+    <div class="row clearfix" id="home">
+        <img class="col-md-4 img-responsive" src="img/ps.png" style="float:left; height:500px; z-index: -5; padding-right:0;">
+        <div class="col-md-8" id="fl" style="padding-left:0; z-index:5" >
 			<div class="carousel slide" id="carousel-829357">
 				<ol class="carousel-indicators">
 					<li class="active" data-slide-to="0" data-target="#carousel-829357">
@@ -106,7 +115,7 @@
 			<h1 class="text-center" >
 				About Us
 			</h1>
-			<p class="text-center" >
+			<p class="col-md-12 text-center" >
 				Project SHIKSHA ‘empowering women’ stands to remove the myths associated with the women and aspires to provide them means and ways to protect themselves from all forms of wrongdoing and sidelining. Education is the cardinal and foremost tool by which women in underdeveloped areas can be empowered and taught to live life independently with respect. <br>
 
 Women have become an object of endurance in this era for they are forced to bear the wrath of ruthless, heinous acts that surround them. Every year contrary to the booming economic development across the globe, the condition of women is simply deteriorating that too at an unpleasant rate. Project SHIKSHA ‘empowering women’ was started with the aim to bring change in the life of women by teaching them and motivating them for better a future. For ages they have been considered as just the backbone of a family, now it’s time that they hold their heads high and embrace the world having plenty of opportunities for their empowerment. <br> 
@@ -116,20 +125,20 @@ Today, even the World Bank has acknowledged that there is no investment more eff
 		</div>
 	</div>
 	<div class="row clearfix pad" id="MnV">
-		<div class="col-md-3 column">
+		<div class="col-md-3" >
 			<h1 class="text-center" >
 				Our Mission
-            </h1></div>
-        
-			<p class="col-md-8 text-center" >
+            </h1>
+        </div>
+        <p class="col-md-8 text-center" style="float:right; z-index:0" >
 <img src="img/left.png"> Our mission is to reach out to as many women in rural areas as possible to educated them and to motivate them and in turn help them to become financially independent.
-<img src="img/right.png">			</p>
+<img src="img/right.png"></p>
 		
 	</div>
     <br>
 	<div class="row clearfix">
 		<div class="col-md-3 column " style="float:right">
-			<h1 class="text-center"  >
+			<h1 class="text-center">
 				Our Vision
 			</h1>
         </div>
@@ -148,7 +157,8 @@ Today, even the World Bank has acknowledged that there is no investment more eff
 				Our Journey
 			</h1>
             <div class="col-md-3 june" >
-			<h3>
+			<img src="img/pin.png" class="center-block">
+                <h3>
 				5th June, 2014
 			</h3>
 			
@@ -158,7 +168,8 @@ Today, even the World Bank has acknowledged that there is no investment more eff
 			
                 </div>
             <div class="col-md-3 july" >
-			<h3>
+			<img src="img/pin.png" class="center-block">
+                <h3>
 				1st July,2014
 			</h3>
 				<p style="font-size:14px;">
@@ -167,7 +178,8 @@ Today, even the World Bank has acknowledged that there is no investment more eff
 
                 </div>
             <div class="col-md-3 column july1" >
-			<h3>
+			<img src="img/pin.png" class="center-block">
+                <h3>
 				16th July,2014
 			</h3>
 			
@@ -177,7 +189,8 @@ Today, even the World Bank has acknowledged that there is no investment more eff
 			
             </div>
             <div class="col-md-3 column july2" >
-			<h3>
+			<img src="img/pin.png" class="center-block">
+                <h3>
 				23rd July,2014
 			</h3>
 			
@@ -190,7 +203,7 @@ Today, even the World Bank has acknowledged that there is no investment more eff
 	</div>
 	<div class="row clearfix">
 		<div class="col-md-12 column">
-			<h1 class="text-center text-muted">
+			<h1 class="text-center">
 				Founders
 			</h1>
 			<div class="row clearfix founder"  >
